<resources>
    <string name="app_name">SplitPayAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_groups">GroupsActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="biometric_title">Login</string>
    <string name="biometric_subtitle">Login to your Osta account</string>
    <string name="biometric_description">Place your finger on the device home button to verify your identity</string>
    <string name="biometric_negative_button_text">Cancel</string>
    <string name="title_activity_confirm_mail">ConfirmMailActivity</string>
    <string name="verified">verified</string>
    <string name="flavor_logout_string">sign out default</string>
    <string name="welcome">Welcome to SplitPay</string>
    <string name="first_time">First time user</string>
    <string name="known_user">Welcome again!</string>
    <string name="display_name">Display name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="submit">submit</string>
    <string name="email_only">Want to register through email?</string>
    <string name="welcome_again">Welcome again</string>
    <string name="or">or</string>
    <string name="register_new_user">Register new user</string>
    <string name="enter_confirm_email">Enter the email at which we will send confirmation link</string>
    <string name="register_normally">Want to register normally?</string>
    <string name="confirming_email">Confirming email</string>
    <string name="confirm_email_desc">Type your email and display name below</string>
    <string name="logged_in_info">%1$s has logged in</string>
</resources>
