<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".intro.BiometricDialogFragment">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <ImageView
                android:id="@+id/img_logo"
                android:layout_width="48dp"
                android:layout_height="48dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:background="@mipmap/ic_launcher_round"/>
        <LinearLayout
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_logo" android:layout_marginStart="16dp">

            <TextView
                    android:id="@+id/item_title"
                    android:text="@string/biometric_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dialog_title"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/item_subtitle"
                    android:text="@string/biometric_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xxsmall"
                    android:textColor="@color/dialog_subtitle"
                    android:textSize="13sp"/>
        </LinearLayout>
        <TextView
                android:id="@+id/item_description"
                android:text="@string/biometric_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/dialog_description" app:layout_constraintTop_toBottomOf="@+id/img_logo"
                android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>


        <ImageView
                android:id="@+id/img_fingerprint"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_fingerprint"
                android:padding="14dp"
                android:src="@drawable/ic_fingerprint" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/item_description" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/itemStatus"/>
        <TextView
                android:id="@+id/itemStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dialog_status"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_cancel"/>
        <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/biometric_negative_button_text"
                android:paddingTop="@dimen/margin_xxlarge"
                android:textColor="@color/dialog_cancel_btn" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>