<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:background="@drawable/background">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:id="@+id/intro_container"
                  android:orientation="vertical">
        <TextView
                android:layout_gravity="center"
                android:text="@string/confirming_email"
                android:textSize="32sp"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"/>
        <androidx.cardview.widget.CardView android:layout_width="270dp"
                                           android:layout_height="375dp"
                                           android:layout_gravity="center"
                                           app:cardCornerRadius="15dp"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                                           android:layout_marginStart="8dp"
                                           app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                               android:layout_height="match_parent">


                <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/card_container_background" />
                <TextView
                        android:text="@string/confirm_email_desc"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:layout_height="wrap_content" android:id="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="28dp"
                        android:paddingBottom="24dp"
                />
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:paddingStart="16dp" android:paddingEnd="16dp">
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="32dp">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email" android:textColor="#ffffff" android:paddingEnd="32dp"/>
                        <EditText android:inputType="textEmailAddress" android:theme="@style/text_edit_style" android:textColor="@color/text_edit_color" android:layout_width="130dp" android:layout_height="wrap_content" android:id="@+id/confirmEmailInput"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content" android:orientation="horizontal">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/display_name" android:textColor="#ffffff" android:paddingEnd="16dp"/>
                        <EditText android:inputType="text" android:theme="@style/text_edit_style" android:textColor="@color/text_edit_color" android:layout_width="140dp" android:layout_height="wrap_content" android:id="@+id/confirmEmailNameInput"/>
                    </LinearLayout>
                    <Button android:layout_width="75dp" android:layout_height="35dp" android:text="@string/submit"
                            android:layout_gravity="center" android:layout_marginTop="60dp"
                            android:textColor="#ffffff" android:background="@drawable/button_style"
                            android:id="@+id/submitConfirmMail" android:onClick="verify"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <ProgressBar android:layout_width="75dp" android:layout_height="75dp"
                 app:layout_constraintEnd_toEndOf="@+id/intro_container"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="@+id/intro_container" android:visibility="invisible"
                 android:id="@+id/confirmEmailProgressBar"/>
</androidx.constraintlayout.widget.ConstraintLayout>