<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".intro.LoginFragment" tools:ignore="LabelFor" >

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">


        <androidx.cardview.widget.CardView android:layout_width="270dp"
                                           android:layout_height="330dp"
                                           app:cardCornerRadius="15dp"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                                           android:layout_marginStart="8dp"
                                           app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                               android:layout_height="match_parent">


                <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/card_container_background" />
                <TextView
                        android:text="@string/first_time"
                        android:layout_width="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:layout_height="wrap_content" android:id="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="28dp"
                        android:paddingBottom="24dp"
                />
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:paddingStart="16dp" android:paddingEnd="16dp">
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content" android:orientation="horizontal">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/display_name" android:textColor="#ffffff" android:paddingEnd="16dp"/>
                        <EditText android:inputType="text" android:layout_width="100dp" android:layout_height="wrap_content" android:id="@+id/nameInput" />
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content" android:orientation="horizontal">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email" android:textColor="#ffffff" android:paddingEnd="32dp"/>
                        <EditText android:inputType="textEmailAddress" android:layout_width="130dp" android:layout_height="wrap_content" android:id="@+id/emailInput"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content" android:orientation="horizontal">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mobile" android:textColor="#ffffff" android:paddingEnd="16dp"/>
                        <EditText android:inputType="phone" android:layout_width="140dp" android:layout_height="wrap_content" android:id="@+id/phoneInput"/>
                    </LinearLayout>
                    <Button android:layout_width="75dp" android:layout_height="35dp" android:text="@string/submit" android:layout_gravity="center" android:layout_marginTop="32dp"
                            android:textColor="#ffffff" android:background="@drawable/button_style"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>